--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <h1>CAMIANMU</h1>
 <h2>Camila Andrades Muñoz</h2>
 </header>
-<video autoplay loop preload="auto" poster="media/video.mp4">
+<video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video.webm">
 	<source src="media/video.mp4" type="video.mp4">
 	<p>Tu navegador no soporta el elemento, actualízate.</p>
