--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="Portafolio CAMIANMU">
 <meta name="og:description" content="Trabajos y proyectos de Camila Andrades Muñoz">
-<meta name="og:image" content="https://scontent.faep3-1.fna.fbcdn.net/v/t1.0-9/18767439_304837176629352_7872456222503978352_n.jpg?oh=3e22dc659bb4a1535e79f56c4aac1a24&oe=5A52BC8A">
-<meta name="og:url" content="cambiar">
+<meta name="og:image" content="cambiar">
+<meta name="og:url" content="https://scontent.faep3-1.fna.fbcdn.net/v/t1.0-9/18767439_304837176629352_7872456222503978352_n.jpg?oh=3e22dc659bb4a1535e79f56c4aac1a24&oe=5A52BC8A">
 <meta name="og:site_name" content="cambiar">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
