--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="cambiar">
+<meta itemprop="name" content="Portafolio CAMIANMU">
 <meta itemprop="description" content="cambiar">
-<meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
+<meta itemprop="image" content="https://scontent.faep3-1.fna.fbcdn.net/v/t1.0-9/18767439_304837176629352_7872456222503978352_n.jpg?oh=3e22dc659bb4a1535e79f56c4aac1a24&oe=5A52BC8A">
 <!-- Twitter -->
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="cambiar">
+<meta name="twitter:card" content="Trabajos y proyectos de Camila Andrades Muñoz">
+<meta name="twitter:title" content="Portafolio CAMIANMU">
 <meta name="twitter:description" content="cambiar">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="Portafolio CAMIANMU">
